[tool.poetry]
name = "delta-notifier"
version = "0.1.0"
description = "A Databricks utility that monitors Delta tables and sends notifications for table operations"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.4.0"
requests = "^2.31.0"
databricks-sdk = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "delta_notifier.main:main" 